[package]
name = "win-util"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
atexit = { path = "../atexit" }
log = "0.4"
os_pipe = "1.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ErrorReporting",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]

[dev-dependencies]
tempfile = "3.7.0"
